# signals

./: .gitignore  Core.hs  Examples.hs  Expr.hs  Interpretation.hs  cabal.project  monadic-edsl-priv.cabal  signal.cabal  signals.cabal
Backend/: C.hs  Ex.hs  Nested.hs  Struct.hs
Backend/C/: Monad.hs
Backend/Compiler/: Compiler.hs  Cycles.hs  Linker.hs  Sorter.hs
Examples/: FIR.hs  Filters.hs  Misc.hs
Examples/Simple/: Expr.hs  FFT.hs  Filters.hs  fir-test.c  output  test-run-info.txt
Frontend/: Knot.hs  Signal.hs  SignalComp.hs  SignalObsv.hs  Stream.hs  TSignal.hs  Temp.hs
Frontend/Signal/: Observ.hs
examples/: Filters.hs  Simple.hs  VHDL.hs
src/: Signal.hs
src/Backend/: C.hs  Compiler.hs  Ex.hs  Knot.hs  Nested.hs
src/Backend/C/: Monad.hs
src/Backend/Compiler/: Cycles.hs  Linker.hs  Sorter.hs
src/Backend/VHDL/: CMD.hs  Examples.hs  Expr.hs  Generate.hs  Pretty.hs  Syntax.hs  Test.hs
src/Frontend/: #Signal.hs#  Signal.hs  Stream.hs
src/Frontend/Signal/: Observ.hs
src/Signal/: Compiler.hs  Core.hs
src/Signal/Compiler/: Channels.hs  Cycles.hs  Interface.hs  Knot.hs  Linker.hs  Sorter.hs
src/Signal/Compiler/Backend/: C.hs  VHDL.hs
src/Signal/Compiler/Backend/C/: Buffer.hs  Buffers.hs
src/Signal/Compiler/Backend/VHDL/: Channels.hs
src/Signal/Compiler/Linker/: Channels.hs  Names.hs
src/Signal/Core/: Data.hs  Frontend.hs  Reify.hs  Stream.hs  Witness.hs
