name:                signal
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
-- license-file:        LICENSE
author:              Markus Aronsson
maintainer:          mararon@chalmers.se
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Core,
                       Frontend.Stream,
                       Frontend.Signal,
                       Frontend.Signal.Observ,
                       Backend.Knot,
                       Backend.Ex,
                       Backend.Nested,
                       Backend.VHDL.Syntax,
                       Backend.VHDL.Pretty,
                       Backend.VHDL.Generate,
                       Backend.VHDL.Expr,
                       Backend.VHDL.CMD,
                       Backend.Compiler.Cycles,
                       Backend.Compiler.Sorter
--                       Backend.Compiler.Linker
--                       Backend.Compiler.Compiler
  -- other-modules:       
  other-extensions:    ConstraintKinds,
                       TypeFamilies,
                       FlexibleContexts,
                       FlexibleInstances,
                       GADTs,
                       DeriveDataTypeable,
                       ScopedTypeVariables,
                       KindSignatures,
                       QuasiQuotes,
                       RecursiveDo,
                       Rank2Types
                       
  build-depends:       base >=4.7,
                       constraints >=0.4 && <0.5,
                       array >=0.5 && <0.6,
                       mtl >=2.2 && <2.3,
                       containers >=0.5 && <0.6,
                       pretty,
                       imperative-edsl >= 0.3,
                       observable-sharing >= 0.2.1.2,
                       -- greater versions break 
                       monad-control < 1.0, 
                       exception-transformers >= 0.3.0.4 && < 0.5,
                       exception-mtl >= 0.3.0.5 && < 0.5
                       
  hs-source-dirs:      .,src
  
  default-language:    Haskell2010
