name:                signal
version:             0.2.0.0
synopsis:            Simple signal processing for DSLs
-- description:         
-- license:             
-- license-file:        LICENSE
author:              Markus Aronsson
maintainer:          mararon@chalmers.se
-- copyright:           
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type:     git
  location: git://github.com/markus-git/signal.git

library
  exposed-modules:
    Signal,
    Signal.Compiler,
    Signal.Compiler.Cycles,
    Signal.Compiler.Sorter,
    Signal.Compiler.Linker,
    Signal.Compiler.Linker.Names,
    Signal.Compiler.Linker.Channels,
    Signal.Compiler.Knot,
    Signal.Core,
    Signal.Core.Stream,
    Signal.Core.Witness,
    Signal.Core.Reify
    
  -- other-modules:       
  other-extensions:
    GADTs,
    KindSignatures,
    Rank2Types,
    TypeOperators,
    ScopedTypeVariables,
    TypeFamilies,
    FlexibleInstances,
    FlexibleContexts
  
  build-depends:
    base                 >=4.7 && <5,
    constraints          >=0.4 && <0.5,
    array                >=0.5 && <0.6,
    mtl                  >=2.2 && <2.3,
    containers           >=0.5 && <0.6,
    pretty,
    language-vhdl        >= 0.1.1.0,
    imperative-edsl      >= 0.3,
    imperative-edsl-vhdl >= 0.1.1.3,
    observable-sharing   >= 0.2.2.1,
    hashable             >= 1.2,
    -- greater versions break 
    monad-control          < 1.0, 
    exception-transformers >= 0.3.0.4 && < 0.5,
    exception-mtl          >= 0.3.0.5 && < 0.5
                       
  hs-source-dirs:
    .,src
  
  default-language:
    Haskell2010
