name:                signals
version:             0.2.0.2
synopsis:            Synchronous signal processing for DSLs.
description:         A library for expressing digital signal processing
                     algorithms using a deeply embedded domain-specific language.
                     The library supports definitions in functional programming
                     style, reducing the gap between the mathematical description
                     of streaming algorithms and their implementation. The deep
                     embedding makes it possible to generate efficient VHDL code
                     without any overhead associated with the high-level
                     programming model. 
license:             BSD3
license-file:        LICENSE
author:              Markus Aronsson
maintainer:          mararon@chalmers.se
-- copyright:           
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type:     git
  location: git://github.com/markus-git/signals.git

library
  exposed-modules:
    Signal,
    Signal.Compiler,
    Signal.Compiler.Cycles,
    Signal.Compiler.Sorter,
    Signal.Compiler.Linker,
    Signal.Compiler.Linker.Names,
    Signal.Compiler.Backend.VHDL,
    Signal.Compiler.Backend.VHDL.Channels,
    Signal.Compiler.Backend.C,
    Signal.Compiler.Backend.C.Buffers,
    Signal.Core,
    Signal.Core.Frontend,
    Signal.Core.Stream,
    Signal.Core.Data,
    Signal.Core.Witness,
    Signal.Core.Reify
    
  -- other-modules:       
  other-extensions:
    GADTs,
    KindSignatures,
    Rank2Types,
    TypeOperators,
    ScopedTypeVariables,
    TypeFamilies,
    FlexibleInstances,
    FlexibleContexts
  
  build-depends:
    base                 >= 4.7 && <5,
    mtl                  >= 2.2 && <2.3,
    constraints          >= 0.8,
    containers           >= 0.5 && <0.6,
    hashable             >= 1.2,
    syntactic            >= 3.6.1,
    operational-alacarte >= 0.3,
    observable-sharing   >= 0.2.5,
    language-vhdl        >= 0.1.3,
    imperative-edsl      >= 0.7.1,
    hardware-edsl        >= 0.1.5.3

  hs-source-dirs:
    .,src
  
  default-language:
    Haskell2010
